--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -1,3 +1,10 @@
-.background{
+.background-color{
     background-color: tan;
-}
+  }
+  
+  .logo-styling {
+    height: 50px;
+    width: 50px;
+  }
+  
+  
